force-app/main/default/objects/Job_Requisition__c/Job_Requisition__c.object-meta.xml
<CustomObject>
    <label>Job Requisition</label>
    <nameField>
        <label>Job Requisition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Requisitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>