force-app/main/default/objects/Job_Requisition__c/fields/Job_Master__c.field-meta.xml
<CustomField>
    <fullName>Job_Master__c</fullName>
    <label>Job Master</label>
    <length>128</length>
    <referenceTo>public_Jobs__x</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>ExternalLookup</type>
</CustomField>