force-app/main/default/objects/Job_Requisition__c/fields/location__c.field-meta.xml
<CustomField>
    <fullName>location__c</fullName>
    <label>localisation</label>
    <length>128</length>
    <type>Text</type>
</CustomField>