force-app/main/default/objects/Job_Requisition__c/fields/Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Date__c</fullName>
    <label>Date de démarrage</label>
    <type>Date</type>
</CustomField>