force-app/main/default/objects/Job_Requisition__c/fields/Poste_r_f_rentiel__c.field-meta.xml
<CustomField>
    <fullName>Poste_r_f_rentiel__c</fullName>
    <label>Poste (référentiel)</label>
    <length>128</length>
    <referenceTo>public_Jobs__x</referenceTo>
    <relationshipLabel>Postes</relationshipLabel>
    <relationshipName>Postes</relationshipName>
    <type>ExternalLookup</type>
</CustomField>