force-app/main/default/objects/Job_Requisition__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <label>Ouvert</label>
            </value>
            <value>
                <fullName>Needs Approval</fullName>
                <label>Besoin d'approbation</label>
            </value>
            <value>
                <fullName>Open - approved</fullName>
                <label>Ouvert - Approuvé</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <label>Fermé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>