force-app/main/default/objects/Job_Requisition__c/listViews/Kanban.listView-meta.xml
<ListView>
    <fullName>Kanban</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Hiring_Manager__c</columns>
    <columns>location__c</columns>
    <columns>Travel_Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>Kanban</label>
</ListView>